[project]
name = "pyaml"
description = "Python Accelerator Middle Layer"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
#license = {file = "LICENSE"}
keywords = ["Accelerator", "Synchrotron", "Operation", "Tuning", "Digital Twin", "Commissioning", ]
maintainers = [
    {name = "Simone Maria Liuzzo", email = "simone.liuzzo@esrf.fr"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "pytango>=9.5.1",
    "pyaml",
    "scipy>=1.7.3",
    "PyYAML>=6.0.2",
    "pydantic>=2.11"
]

[project.urls]
Homepage = "https://github.com/python-accelerator-middle-layer/tango-pyaml"
Documentation = "https://python-accelerator-middle-layer.github.io/tango-pyaml/"
Repository = "https://github.com/python-accelerator-middle-layer/tango-pyaml.git"