[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "tango/pyaml/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
  "/tests",
]

# Install tango-pyaml as a sub module of tango
[tool.hatch.build.targets.wheel]
packages = ["tango"]

[project]
name = "tango-pyaml"
description = "Bridge between Tango and PyAML"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]
#license = {file = "LICENSE"}
keywords = ["Accelerator", "Synchrotron", "Operation", "Tuning", "Digital Twin", "Commissioning", "Tango" ]
maintainers = [
    {name = "Guillaume PICHON", email = "guillaume.pichon@synchrotron-soleil.fr"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "PyTango>=10.1.1",
    "accelerator-middle-layer<=0.2.1",
    "pydantic>=2.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "ruff",                 # Linter (optionnel)
    "mypy",                 # Typage statique (optionnel)
    "ipython",              # Débogage interactif
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/python-accelerator-middle-layer/tango-pyaml"
Documentation = "https://python-accelerator-middle-layer.github.io/tango-pyaml/"
Repository = "https://github.com/python-accelerator-middle-layer/tango-pyaml.git"
